--- a/Home.html
+++ b/Home.html
@@ -1,19 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<LINK REL=StyleSheet HREF="mystyle1.css" TYPE="text/css" 
+<LINK REL=StyleSheet HREF="mystyle1.css" TYPE="text/css" >  
 <body>
 <title>Top 6 Most Played Sports In USA</title>
 <head>
-<div id="main">
-<h1>Top 6 Most Played Sports In USA<h1>
+<h1>Top 6 Most Played Sports In USA</h1>
 <hr>
-<ul>
-<li><a href="home.html">HOME</a></li>
-<li><a href="Football.html">FOOTBALL</a></li>
-<li><a href="Baseball.html">BASEBALL</a></li>
-<li><a href="Basketball.html">BASKETBALL</a></li>
-<li><a href="Soccer.html">SOCCER</a></li>
-<li><a href="Tennis.html">TENNIS</a></li>
-<li><a href="Badminton.html">BADMINTON</a></li>
-<li><a href="Stats.html">STATS</a></li>
-</body>
+<button onclick="showAlert()">-->CLICK<--</button> 
+<script>
+  function showAlert() { 
+    alert ("Hello And Welcome To The Website!");
+  }
+  </script>
+<div class="topnav">
+<a href="Home.html">HOME</a></li>
+<a href="Football.html">FOOTBALL</a></li>
+<a href="Baseball.html">BASEBALL</a></li>
+<a href="Basketball.html">BASKETBALL</a></li>
+<a href="Soccer.html">SOCCER</a></li>
+<a href="Tennis.html">TENNIS</a></li>
+<a href="Badminton.html">BADMINTON</a></li>
+<a href="Stats.html">STATS</a></li>
+<h2>Welcome</h2>
+<p>HELLO EVERYONE! Are you interested into playing sports? Well you came to the right site. Today I'm going to be telling about the Top 6 most played sports in the USA</p>
+</html>
+
+
+
+
+
