--- a/Baseball.html
+++ b/Baseball.html
@@ -15,3 +15,36 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<h2>History</h2>
+<p>The evolution of baseball from older bat-and-ball games is difficult to trace with precision. The earliest known reference to baseball is in a 1744 British publication, A Little Pretty Pocket-Book, by John Newbery. Block discovered that the first recorded game of "Bass-Ball" took place in 1749 in Surrey, and featured the Prince of Wales as a player. This early form of the game was apparently brought to Canada by English immigrants.</p>
+<h3>Scoring/Game</h3>
+<p>A baseball game is played between two teams, each composed of nine players, that take turns playing offense (batting and baserunning) and defense (pitching and fielding). A pair of turns, one at bat and one in the field, by each team constitutes an inning. A game consists of nine innings (seven innings at the high school level and in doubleheaders in college and minor leagues, and six innings at the Little League level).The goal of the game is to score more points (runs) than the other team. The players on the team at bat attempt to score runs by circling or completing a tour of the four bases set at the corners of the square-shaped baseball diamond. A player bats at home plate and must proceed counterclockwise to first base, second base, third base, and back home to score a run. The team in the field attempts to prevent runs from scoring and record outs, which remove opposing players from offensive action until their turn in their team's batting order comes up again. When three outs are recorded, the teams switch roles for the next half-inning.</p>
+<h4>Equipment</h4>
+<p>There are three basic tools of baseball: the ball, the bat, and the glove or mitt:The baseball is about the size of an adult's fist, around 9 inches (23 centimeters) in circumference. It has a rubber or cork center, wound in yarn and covered in white cowhide, with red stitching.The bat is a hitting tool, traditionally made of a single, solid piece of wood. Other materials are now commonly used for nonprofessional games. It is a hard round stick, about 2.5 inches (6.4 centimeters) in diameter at the hitting end, tapering to a narrower handle and culminating in a knob. Bats used by adults are typically around 34 inches (86 centimeters) long, and not longer than 42 inches (106 centimeters).The glove or mitt is a fielding tool, made of padded leather with webbing between the fingers. As an aid in catching and holding onto the ball, it takes various shapes to meet the specific needs of different fielding positions</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
