--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 <head>
 <h1>Top 6 Most Played Sports In USA</h1>
 <hr>
-<button onclick="showAlert()">-->CLICK<--</button> 
+<button onclick="showAlert()">Hey</button> 
 <script>
   function showAlert() { 
     alert ("Hello And Welcome To The Website!");
@@ -22,7 +22,7 @@
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
 <h2>Welcome</h2>
-<p>HELLO EVERYONE! Are you interested into playing sports? Well you came to the right site. Today I'm going to be telling about the Top 6 most played sports in the USA</p>
+<p>HELLO EVERYONE! Are you interested into playing sports? Well you came to the right site. This Website will tell more about The Top 6 Played In The USA and explaining what how each sports is played. At the end there would be a page where it will show the stats of how many High School/College students played this sport,showing the ranked that they are in the world and how much people play the sports.</p>
 </html>
 
 
