--- a/Stats.html
+++ b/Stats.html
@@ -15,3 +15,55 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<table>
+<caption>Status</caption>
+  <tr> 
+  <th scope="col">Football</th>
+  <th scope="col">Baseball</th>
+  <th scope="col">Baskeball</th>
+  <th scope="col">Soccer</th>
+  <th scope="col">Tennis</th>
+  <th scope="col">Badminton</th>
+  </tr>
+  <tr>
+  <td> Top 1</td>
+  <td>Top 2</td>
+	<td>Top 3</td>
+	<td>Top 4</td>
+	<td>Top 5</td>
+	<td>Top 6</td>
+	</tr>
+   <tr>
+  <td>1.1 Million High School Athletes And About 70,000 College Athletes Play Football In US</td>
+  <td>491,790 High School Athletes and About 56,423 College Athletes Play Baseball In US</td>
+  <td>With</td>
+  <td>With</td>
+  <td>With</td>
+  <td>With</td>
+ </tr>
+	 <tr>
+  <td> Played</td>
+  <td>Played</td>
+  <td>Played</td>
+  <td>Played</td>
+  <td>Played</td>
+  <td>Played</td>
+  </tr>
+	<tr>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>  
+	</tr>
+	<tr>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+	</tr>
+ 
+ </table></body></html>
