--- a/Soccer.html
+++ b/Soccer.html
@@ -15,3 +15,26 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<h2>Scoring/Game</h2>
+<p>During gameplay, players attempt to create goal-scoring opportunities through individual control of the ball, such as by dribbling, passing the ball to a teammate, and by taking shots at the goal, which is guarded by the opposing goalkeeper. Opposing players may try to regain control of the ball by intercepting a pass or through tackling the opponent in possession of the ball; however, physical contact between opponents is restricted. Football is generally a free-flowing game, with play stopping only when the ball has left the field of play or when play is stopped by the referee for an infringement of the rules. After a stoppage, play recommences with a specified restart.</p>
+<h3>Rules</h3>
+<p>Players are not allowed to touch the ball with outstretched hands or arms while it is in play, unless they are goalkeepers within their penalty area. Other players mainly use their feet to strike or pass the ball, but may also use any other part of their body except the hands and the arms. The team that scores the most goals by the end of the match wins. If the score is level at the end of the game, either a draw is declared or the game goes into extra time or a penalty shootout depending on the format of the competition.The game is played using a spherical ball of 68–70 cm (27–28 in) circumference,[64] known as the football (or soccer ball). Two teams of eleven players each compete to get the ball into the other team's goal (between the posts and under the bar), thereby scoring a goal. The team that has scored more goals at the end of the game is the winner; if both teams have scored an equal number of goals then the game is a draw. Each team is led by a captain who has only one official responsibility as mandated by the Laws of the Game: to represent his or her team in the coin toss prior to kick-off or penalty kicks.</p>
+<h4>Equipment</h4>
+<p>Cleats-help give you grip when running up/down the field. Shin Guards-proctect you shin from getting kick by other players. Soccer ball-used to play the sport.</p>
+<h5>Time</h5>
+<p>A soccer game is divided into 2 45 minute halves equal a total regulation game of 90 minutes. In soccer, the clock runs continuously. At the end of every game a referee determines how much "extra time" is going to be added- which is usually between 2 and 4 minutes. </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
