--- a/Tennis.html
+++ b/Tennis.html
@@ -15,3 +15,4 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<h2>History</h2>
