--- a/Badminton.html
+++ b/Badminton.html
@@ -15,3 +15,14 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<h2>History</h2>
+<p> The modern game of badminton developed in the mid-19th century among the British as a variant of the earlier game of battledore and shuttlecock. ("Battledore" was an older term for "racquet".) Its exact origin remains obscure. The name derives from the Duke of Beaufort's Badminton House in Gloucestershire, but why or when remains unclear.</p>
+<h3>Scoring/Game</h3>
+<p>The court is rectangular and divided into halves by a net. Courts are usually marked for both singles and doubles play, although badminton rules permit a court to be marked for singles only. The doubles court is wider than the singles court, but both are of the same length. The exception, which often causes confusion to newer players, is that the doubles court has a shorter serve-length dimension.Each game is played to 21 points, with players scoring a point whenever they win a rally regardless of whether they served (this differs from the old system where players could only win a point on their serve and each game was played to 15 points). A match is the best of three games.
+If the score reaches 20-all, then the game continues until one side gains a two-point lead (such as 24–22), except when there is a tie at 29-all, in which the game goes to a golden point. Whoever scores this point will win.</p>
+<h4>Rules/Equipment</h4>
+<p>At the start of the rally, the server and receiver stand in diagonally opposite service courts (see court dimensions). The server hits the shuttlecock so that it would land in the receiver's service court. This is similar to tennis, except that a badminton serve must be hit below waist height and with the racquet shaft pointing downwards, the shuttlecock is not allowed to bounce and in badminton, the players stand inside their service courts, unlike tennis.
+When the serving side loses a rally, the server immediately passes to their opponent(s) (this differs from the old system where sometimes the serve passes to the doubles partner for what is known as a "second serve").
+In singles, the server stands in their right service court when their score is even, and in her/his left service court when her/his score is odd.Badminton racquets are lightweight, with top quality racquets weighing between 70 and 95 grams (2.5 and 3.4 ounces) not including grip or strings. Strings are thin, high performing strings with thicknesses ranging from about 0.62 to 0.73 mm. Shoes are lightweight with soles of rubber or similar high-grip, non-marking materials.</p>
+<h5>Time</h5>
+<p>There is no time limit for individual games or the match as a whole. Each game of the best-of three series must be won by at least two points, up to a maximum of 30.</p>
