--- a/Stats.html
+++ b/Stats.html
@@ -34,36 +34,20 @@
 	<td>Top 6</td>
 	</tr>
    <tr>
-  <td>1.1 Million High School Athletes And About 70,000 College Athletes Play Football In US</td>
-  <td>491,790 High School Athletes and About 56,423 College Athletes Play Baseball In US</td>
-  <td>With</td>
-  <td>With</td>
-  <td>With</td>
-  <td>With</td>
+  <td>1.1 Million HighSchool Athletes And About 70,000 College Athletes Play Football In US</td>
+  <td>491,790 HighSchool Athletes and About 56,423 College Athletes Play Baseball In US</td>
+  <td>550,305 HighsSchool students Athletes and About 30,738 College Athletes Play Basketball In US </td>
+  <td>450,234 HighSchool Students Athletes And About 34,145 College Athletes Play Soccer In US</td>
+  <td>158,171 HighSchool Students Athletes And About 6,894 College Athletes Play Tennis In US</td>
+  <td>15,000 Highschool Students Athletes And About 10,000 College Athletes Play BAdminton In US </td>
  </tr>
 	 <tr>
-  <td> Played</td>
-  <td>Played</td>
-  <td>Played</td>
-  <td>Played</td>
-  <td>Played</td>
-  <td>Played</td>
+  <td>Is a Hand And Feet Sport</t
+  <td>Is a Hand And Racket Sport</td>
+  <td>Is a Hand And Racket Sport</td>d>
+  <td>Is a Hand Sport</td>
+  <td>Is a Hand Sport</td>
+  <td>Is a Feet And Body Sport</td>
   </tr>
-	<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>  
-	</tr>
-	<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-	</tr>
  
  </table></body></html>
