--- a/Stats.html
+++ b/Stats.html
@@ -42,7 +42,7 @@
   <td>15,000 Highschool Students Athletes And About 10,000 College Athletes Play BAdminton In US </td>
  </tr>
 	 <tr>
-  <td>Is a Hand And Feet Sport</t
+  <td>Is a Hand And Feet Sport</td>
   <td>Is a Hand And Racket Sport</td>
   <td>Is a Hand And Racket Sport</td>d>
   <td>Is a Hand Sport</td>
