--- a/Stats.html
+++ b/Stats.html
@@ -44,7 +44,7 @@
 	 <tr>
   <td>Is a Hand And Feet Sport</td>
   <td>Is a Hand And Racket Sport</td>
-  <td>Is a Hand And Racket Sport</td>d>
+  <td>Is a Hand And Racket Sport</td>
   <td>Is a Hand Sport</td>
   <td>Is a Hand Sport</td>
   <td>Is a Feet And Body Sport</td>
