--- a/Soccer.html
+++ b/Soccer.html
@@ -23,7 +23,7 @@
 <p>Cleats-help give you grip when running up/down the field. Shin Guards-proctect you shin from getting kick by other players. Soccer ball-used to play the sport.</p>
 <h5>Time</h5>
 <p>A soccer game is divided into 2 45 minute halves equal a total regulation game of 90 minutes. In soccer, the clock runs continuously. At the end of every game a referee determines how much "extra time" is going to be added- which is usually between 2 and 4 minutes. </p>
-
+</body> </html>
 
 
 
