--- a/Badminton.html
+++ b/Badminton.html
@@ -15,6 +15,7 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<img src="Badminton.JPG">
 <h2>History</h2>
 <p> The modern game of badminton developed in the mid-19th century among the British as a variant of the earlier game of battledore and shuttlecock. ("Battledore" was an older term for "racquet".) Its exact origin remains obscure. The name derives from the Duke of Beaufort's Badminton House in Gloucestershire, but why or when remains unclear.</p>
 <h3>Scoring/Game</h3>
@@ -26,4 +27,9 @@ When the serving side loses a rally, the server immediately passes to their oppo
 In singles, the server stands in their right service court when their score is even, and in her/his left service court when her/his score is odd.Badminton racquets are lightweight, with top quality racquets weighing between 70 and 95 grams (2.5 and 3.4 ounces) not including grip or strings. Strings are thin, high performing strings with thicknesses ranging from about 0.62 to 0.73 mm. Shoes are lightweight with soles of rubber or similar high-grip, non-marking materials.</p>
 <h5>Time</h5>
 <p>There is no time limit for individual games or the match as a whole. Each game of the best-of three series must be won by at least two points, up to a maximum of 30.</p>
-</body> </html>
+</body>
+</html>
+
+
+
+
