--- a/Basketball.html
+++ b/Basketball.html
@@ -15,6 +15,7 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<img src="Basketball.JPG">
 <h2>History</h2>
 <p>Basketball was originally played with a soccer ball. These round balls from "association football" were made, at the time, with a set of laces to close off the hole needed for inserting the inflatable bladder after the other sewn-together segments of the ball's cover had been flipped outside-in. These laces could cause bounce passes and dribbling to be unpredictable. Eventually a lace-free ball construction method was invented, and this change to the game was endorsed by Naismith.</p>
 <h3>Scoring/Game</h3>
@@ -23,7 +24,7 @@
 <p>The size of the basketball is also regulated. For men, the official ball is 29.5 inches (75 cm) in circumference (size 7, or a "295 ball") and weighs 22 oz (623.69 grams). If women are playing, the official basketball size is 28.5 inches (72 cm) in circumference (size 6, or a "285 ball") with a weight of 20 oz (567 grams). In 3x3, a formalized version of the halfcourt 3-on-3 game, a dedicated ball with the circumference of a size 6 ball but the weight of a size 7 ball is used in all competitions (men's, women's, and mixed teams).</p>
 <h5>Time</h5>
 <p>Games are played in four quarters of 10 (FIBA) or 12 minutes (NBA). College men's games use two 20-minute halves, college women's games use 10-minute quarters, and United States high school varsity games use 8 minute quarters. 15 minutes are allowed for a half-time break under FIBA, NBA, and NCAA rules and 10 minutes in United States high schools. Overtime periods are five minutes in length except for high school, which is four minutes in length. Teams exchange baskets for the second half. The time allowed is actual playing time; the clock is stopped while the play is not active.</p>
-</html></body>
+</body> </html>
 
 
 
