--- a/Football.html
+++ b/Football.html
@@ -15,7 +15,8 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
-<h2>History<h2>
+<img src="Football.PNG">
+<h2>Early History<h2>
 <p>American football evolved from the sports of association football (soccer) and rugby football. The first game was played on November 6, 1869 between Rutgers and Princeton. The game was played between two teams of 25 players each and used a round ball that could not be picked up or carried. It could, however, be kicked or batted with the feet, hands, head or sides, with the ultimate goal being to advance it into the opponent's goal.</p>
 <h3>Scoring</h3>
 <p>The touchdown (TD), worth six points, is the most valuable scoring play in American football. A touchdown is scored when a live ball is advanced into, caught in, or recovered in the end zone of the opposing team. The scoring team then attempts a try or conversion, more commonly known as the point(s)-after-touchdown (PAT), which is a single scoring opportunity.A field goal (FG), worth three points, is scored when the ball is placekicked or dropkicked through the uprights and over the crossbars of the defense's goalposts. After a PAT attempt or successful field goal the scoring team must kick the ball off to the other team.A safety is scored when the ball carrier is tackled in their own end zone. Safeties are worth two points, which are awarded to the defense. In addition, the team that conceded the safety must kick the ball to the scoring team via a free kick.</p>
@@ -23,7 +24,7 @@
 <p>Football games are played on a rectangular field that measures 120 yards (110 m) long and 53.33 yards (48.76 m) wide. Lines marked along the ends and sides of the field are known respectively as the end lines and sidelines, and goal lines are marked 10 yards (9.1 m) inward from each end line. Weighted pylons are placed on the inside corner of the intersections of the goal lines and end lines.White markings on the field identify the distance from the end zone. Inbound lines, or hash marks, are short parallel lines that mark off 1 yard (0.91 m) increments. Yard lines, which can run the width of the field, are marked every 5 yards (4.6 m).</p>
 <h5>Time</h5>
 <p>Football games last for a total of 60 minutes in professional and college play and are divided into two-halves of 30 minutes and four-quarters of 15 minutes.High school football games are 48 minutes in length with two-halves of 24 minutes and four-quarters of 12 minutes. The two-halves are separated by a halftime period, and the first and third quarters are also followed by a short break. the start of the game, the referee and team captains for each team meet at midfield for a coin toss to see who gets the ball.</p>
-
+</body></html>
 
 
 
