--- a/Tennis.html
+++ b/Tennis.html
@@ -16,7 +16,7 @@
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
 <h2>History</h2>
-<img src="images/tennis"/>
+<img src="tennis.jpg">
 <p>People believe that the game's ancient origin lay in 12th century northern France, where a ball was struck with the palm of the hand. Louis X of France was a keen player of jeu de paume ("game of the palm"), which evolved into real tennis, and became notable as the first person to construct indoor tennis courts in the modern style</p>
 <h3>Scoring/Game</h3>
 <p>Tennis is a racket sport that can be played individually against a single opponent (singles) or between two teams of two players each (doubles). Each player uses a tennis racket that is strung with cord to strike a hollow rubber ball covered with felt over or around a net and into the opponent's court. The object of the game is to maneuver the ball in such a way that the opponent is not able to play a valid return. The player who is unable to return the ball will not gain a point, while the opposite player will.A tennis tournament is organized into matches between players (for singles tournaments) or teams of two players (for doubles tournaments). The matches of a tournament are grouped into rounds. In round 1, all players (or teams) are paired and play against each other in matches. The losers are said to leave, or be out. They no longer compete in the tournament (this is single elimination).</p>
@@ -28,3 +28,13 @@ If the server clips the net but the ball goes in the service area still then let
 The receiver may stand where they wish upon receipt of the serve. If the ball is struck without the serve bouncing then the server will receive the point.Rackets,ball and a net needed to play.</p>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
