--- a/Football.html
+++ b/Football.html
@@ -15,7 +15,7 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
-<img src="Football.PNG">
+<img src="Football.png">
 <h2>Early History<h2>
 <p>American football evolved from the sports of association football (soccer) and rugby football. The first game was played on November 6, 1869 between Rutgers and Princeton. The game was played between two teams of 25 players each and used a round ball that could not be picked up or carried. It could, however, be kicked or batted with the feet, hands, head or sides, with the ultimate goal being to advance it into the opponent's goal.</p>
 <h3>Scoring</h3>
