--- a/Badminton.html
+++ b/Badminton.html
@@ -15,7 +15,7 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
-<img src="Badminton.JPG">
+<img src="Badminton.jpg">
 <h2>History</h2>
 <p> The modern game of badminton developed in the mid-19th century among the British as a variant of the earlier game of battledore and shuttlecock. ("Battledore" was an older term for "racquet".) Its exact origin remains obscure. The name derives from the Duke of Beaufort's Badminton House in Gloucestershire, but why or when remains unclear.</p>
 <h3>Scoring/Game</h3>
