--- a/Baseball.html
+++ b/Baseball.html
@@ -15,7 +15,7 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
-<img src="Baseball.JPG">
+<img src="Baseball.jpg">
 <h2>History</h2>
 <p>The evolution of baseball from older bat-and-ball games is difficult to trace with precision. The earliest known reference to baseball is in a 1744 British publication, A Little Pretty Pocket-Book, by John Newbery. Block discovered that the first recorded game of "Bass-Ball" took place in 1749 in Surrey, and featured the Prince of Wales as a player. This early form of the game was apparently brought to Canada by English immigrants.</p>
 <h3>Scoring/Game</h3>
