--- a/Basketball.html
+++ b/Basketball.html
@@ -15,7 +15,7 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
-<img src="Basketball.JPG">
+<img src="Basketball.jpg">
 <h2>History</h2>
 <p>Basketball was originally played with a soccer ball. These round balls from "association football" were made, at the time, with a set of laces to close off the hole needed for inserting the inflatable bladder after the other sewn-together segments of the ball's cover had been flipped outside-in. These laces could cause bounce passes and dribbling to be unpredictable. Eventually a lace-free ball construction method was invented, and this change to the game was endorsed by Naismith.</p>
 <h3>Scoring/Game</h3>
