--- a/Football.html
+++ b/Football.html
@@ -15,8 +15,8 @@
 <a href="Tennis.html">TENNIS</a></li>
 <a href="Badminton.html">BADMINTON</a></li>
 <a href="Stats.html">STATS</a></li>
+<img src="Football.PNG">
 <h2>Early History<h2>
- <img src="American Football.png"> 
 <p>American football evolved from the sports of association football (soccer) and rugby football. The first game was played on November 6, 1869 between Rutgers and Princeton. The game was played between two teams of 25 players each and used a round ball that could not be picked up or carried. It could, however, be kicked or batted with the feet, hands, head or sides, with the ultimate goal being to advance it into the opponent's goal.</p>
 <h3>Scoring</h3>
 <p>The touchdown (TD), worth six points, is the most valuable scoring play in American football. A touchdown is scored when a live ball is advanced into, caught in, or recovered in the end zone of the opposing team. The scoring team then attempts a try or conversion, more commonly known as the point(s)-after-touchdown (PAT), which is a single scoring opportunity.A field goal (FG), worth three points, is scored when the ball is placekicked or dropkicked through the uprights and over the crossbars of the defense's goalposts. After a PAT attempt or successful field goal the scoring team must kick the ball off to the other team.A safety is scored when the ball carrier is tackled in their own end zone. Safeties are worth two points, which are awarded to the defense. In addition, the team that conceded the safety must kick the ball to the scoring team via a free kick.</p>
