--- a/Home.html
+++ b/Home.html
@@ -24,6 +24,10 @@
 <h2>Welcome</h2>
 <img src="sports.jpg">
 <p>HELLO EVERYONE! Are you interested into playing sports? Well you came to the right site. This Website will tell more about The Top 6 Played In The USA and explaining what how each sports is played. At the end there would be a page where it will show the stats of how many High School/College students played this sport,showing the ranked that they are in the world and how much people play the sports.</p>
+<hr>
+<p> Made By: Jorge Romero</p>
+<p>Contact: 20romeroj@gmail.com</p>
+<p>6/1/18</p>
 </html>
 
 
